# skillops-forge

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml  skillops.yml
docs/: architecture.md  class-diagram.mermaid  rules.md  sequence-diagram.mermaid  task-list.md
scripts/: export_schema.py  scan_real_skills.py
src/skillops_forge/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging_setup.py  models.py  pipeline.py  rule_catalog.py
src/skillops_forge/auditor/: __init__.py  description.py  disclosure.py  examples.py  frontmatter.py  io_schema.py  links.py  naming.py  permission_summary.py  permissions.py  sizing.py
src/skillops_forge/ci/: __init__.py  github_actions.py
src/skillops_forge/parser/: __init__.py  base.py  claude_md.py  cursor_rules.py  inventory.py  markdown_utils.py  protocol.py  skill_md.py
src/skillops_forge/plugins/: __init__.py  protocol.py
src/skillops_forge/reporter/: __init__.py  _common.py  html.py  json_report.py  markdown.py  scoring.py
src/skillops_forge/rules/: __init__.py  browser_storage.yaml  dangerous_commands.yaml  decode_actions.yaml  dynamic_exec_bypass.yaml  exfiltration.yaml  hidden_instructions.yaml  identity_files.yaml  network_endpoints.yaml  privilege.yaml  remote_scripts.yaml  sensitive_paths.yaml  system_paths.yaml
src/skillops_forge/runner/: __init__.py  dry_run.py  interceptors.py
src/skillops_forge/scanner/: __init__.py  engine.py  heuristics.py  rule.py
src/skillops_forge/templates/: __init__.py  report.html.j2  report.md.j2
src/skillops_forge/templates/ci/: skillops.yml.j2
tests/: __init__.py  conftest.py
tests/fixtures/bad/base64-blob/: SKILL.md
tests/fixtures/bad/curl-pipe-bash/: SKILL.md
tests/fixtures/bad/hidden-zerowidth/: SKILL.md
tests/fixtures/bad/missing-frontmatter/: SKILL.md
tests/fixtures/bad/rm-rf-root/: SKILL.md
tests/fixtures/bad/sensitive-path-aws/: SKILL.md
tests/fixtures/good/claude-md-basic/: CLAUDE.md
tests/fixtures/good/cursor-rules-basic/.cursor/rules/: python-style.mdc
tests/fixtures/good/skill-md-basic/: SKILL.md
tests/fixtures/good/skill-md-permissioned/: SKILL.md
tests/fixtures/good/skill-md-with-examples/: SKILL.md
tests/fixtures/qa-coverage/sec002/: SKILL.md
tests/fixtures/qa-coverage/sec004/: SKILL.md
tests/fixtures/qa-coverage/sec006/: SKILL.md
tests/fixtures/qa-coverage/sec011/: SKILL.md
tests/fixtures/qa-coverage/sec012/: SKILL.md
tests/fixtures/qa-coverage/sec013/: SKILL.md
tests/fixtures/qa-coverage/sec014/: SKILL.md
tests/fixtures/qa-coverage/sec015/: SKILL.md
tests/fixtures/qa-coverage/sec016/: SKILL.md
tests/fixtures/qa-coverage/sec017/: SKILL.md
tests/integration/: __init__.py  test_cli.py  test_pipeline_end_to_end.py
tests/unit/: __init__.py  test_auditor.py  test_ci_init.py  test_models.py  test_naming.py  test_parser_claude_md.py  test_parser_cursor_rules.py  test_parser_skill_md.py  test_reporter.py  test_reporter_v012.py  test_runner_dry_run.py  test_scanner_dedup.py  test_scanner_engine.py  test_scanner_heuristics.py  test_scanner_v012_rules.py  test_scoring.py  test_sizing.py  test_v021_honesty.py  test_v02_features.py
