[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "skillops-forge"
version = "0.2.1"
description = "Static analysis & risk auditor for AI skill packs (SKILL.md / CLAUDE.md / Cursor rules)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "junjunup", email = "junjunup@users.noreply.github.com" }]
maintainers = [{ name = "junjunup", email = "junjunup@users.noreply.github.com" }]
keywords = [
    "ai-agent",
    "claude-code",
    "cursor",
    "skill",
    "skills",
    "lint",
    "linter",
    "security",
    "static-analysis",
    "audit",
    "agentic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12,<0.16",
    "rich>=13.7,<15",
    "pydantic>=2.7,<3",
    "pyyaml>=6.0,<7",
    "markdown-it-py>=3.0,<4",
    "jinja2>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-cov>=6.0,<8",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "bandit>=1.7,<2",
    "pip-audit>=2.7,<3",
    "types-PyYAML",
]
llm = [
    "httpx>=0.27",
]

[project.scripts]
skillops = "skillops_forge.cli:app"

[project.urls]
Homepage = "https://github.com/junjunup/skillops-forge"
Repository = "https://github.com/junjunup/skillops-forge"
Issues = "https://github.com/junjunup/skillops-forge/issues"
Changelog = "https://github.com/junjunup/skillops-forge/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/junjunup/skillops-forge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/skillops_forge"]

[tool.hatch.build.targets.sdist]
include = [
    "src/skillops_forge",
    "README.md",
    "README_CN.md",
    "LICENSE",
    "pyproject.toml",
    "docs",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "B", "UP", "SIM", "C4", "ARG", "RUF",
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # typer uses default values that look like calls
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]
exclude = ["tests/fixtures"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["markdown_it.*", "jinja2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests",
    "unit: unit tests",
]

[tool.coverage.run]
source = ["src/skillops_forge"]
branch = true
omit = ["src/skillops_forge/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.bandit]
exclude_dirs = ["tests", "build", ".venv"]
skips = ["B101"]
